--- a/app/src/main/res/layout/activity_loaderactivity.xml
+++ b/app/src/main/res/layout/activity_loaderactivity.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
         android:layout_marginTop="264dp"
+        android:onClick="onClick"
         android:text="Web Browser"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
